feat: development enviroment configuration

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,34 +1,58 @@
+// {
+//   "compilerOptions": {
+//     "allowJs": false,
+//     "allowSyntheticDefaultImports": true,
+//     "composite": true,
+//     "declaration": true,
+//     "declarationMap": true,
+//     "emitDeclarationOnly": true,
+//     "emitDecoratorMetadata": false,
+//     "esModuleInterop": true,
+//     "experimentalDecorators": false,
+//     "forceConsistentCasingInFileNames": true,
+//     "importHelpers": true,
+//     "incremental": true,
+//     "isolatedModules": true,
+//     "lib": ["es2022"],
+//     "module": "NodeNext",
+//     "moduleResolution": "NodeNext",
+//     "noEmitOnError": true,
+//     "noFallthroughCasesInSwitch": true,
+//     "noImplicitOverride": true,
+//     "noImplicitReturns": true,
+//     "noUnusedLocals": true,
+//     "pretty": true,
+//     "removeComments": false,
+//     "resolveJsonModule": false,
+//     "skipDefaultLibCheck": false,
+//     "skipLibCheck": true,
+//     "sourceMap": false,
+//     "strict": true,
+//     "target": "es2022",
+//     "verbatimModuleSyntax": false
+//   }
+// }
+
 {
-  "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "emitDecoratorMetadata": false,
-    "esModuleInterop": true,
-    "experimentalDecorators": false,
-    "forceConsistentCasingInFileNames": true,
-    "importHelpers": true,
-    "incremental": true,
-    "isolatedModules": true,
-    "lib": ["es2022"],
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "pretty": true,
-    "removeComments": false,
-    "resolveJsonModule": false,
-    "skipDefaultLibCheck": false,
-    "skipLibCheck": true,
-    "sourceMap": false,
-    "strict": true,
-    "target": "es2022",
-    "verbatimModuleSyntax": false
-  }
+	"compileOnSave": false,
+	"compilerOptions": {
+		"baseUrl": ".",
+		"rootDir": ".",
+		"declaration": false,
+		"module": "ESNext",
+		"moduleResolution": "node",
+		"target": "ES2015",
+
+		"skipDefaultLibCheck": true,
+		"skipLibCheck": true,
+
+		"esModuleInterop": true,
+		"lib": ["ESNext", "DOM", "DOM.Iterable"],
+		"importHelpers": true,
+		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true,
+
+		"strict": true
+	},
+	"exclude": ["node_modules"]
 }
